--- a/LatihanSoal/Views/Product/Index.cshtml
+++ b/LatihanSoal/Views/Product/Index.cshtml
@@ -22,6 +22,11 @@
     </div>
 </div>
 
+<div id="DetailWindow"></div>
+<div id="CreateWindow"></div>
+<div id="EditWindow"></div>
+<div id="DeleteWindow"></div>
+
 @section Scripts
 {
 <script async='async' type='text/javascript'>
