--- a/LatihanSoal/Views/Shared/_Layout.cshtml
+++ b/LatihanSoal/Views/Shared/_Layout.cshtml
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LatihanSoal.styles.css" asp-append-version="true" />
-        
+
+
 </head>
 <body>
     <header>
@@ -60,6 +61,11 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">  
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+
+    <script src="~/lib/kendo/kendo.ui.core.min.js"></script>
+    <script src="~/lib/kendo/kendo.culture.de-DE.js"></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
