--- a/LatihanSoal/Views/Pelanggan/Index.cshtml
+++ b/LatihanSoal/Views/Pelanggan/Index.cshtml
@@ -35,8 +35,7 @@
 <script async='async' type='text/javascript'>
 
              
-$(document).ready(function() {
-    
+    var Pelanggan = (function (Pelanggan) {
  $('#myTable').DataTable( {
         processing: true, // for show progress bar
         serverSide: false, // for process server side  
@@ -73,9 +72,9 @@ $(document).ready(function() {
             { "data": "noTelp" },
             {
                 "render": function (data, type, full, meta) {
-                    var result = "<a href=\"javascript:;\" onClick='TLE.LecTypeDetailPopUp(event," + full.Id + ")' class='text-primary-600'>Detail</a>";
-                        result = result + "|<a href=\"javascript:;\" onClick='TLE.LecTypeDetailPopUp(event," + full.Id + ")' class='text-primary-600'>Edit</a>";
-                        result = result + "|<a href=\"javascript:;\" onClick='TLE.LecTypeDetailPopUp(event," + full.Id + ")' class='text-primary-600'>Delete</a>";
+                    var result = "<a href=\"javascript:;\" onClick='DetailPopUp(event," + full.Id + ")' class='btn btn-secondary'>Detail</a>";
+                        result = result + " <a href=\"javascript:;\" onClick='EditPopUp(event," + full.Id + ")' class='btn btn-warning'>Edit</a>";
+                        result = result + " <a href=\"javascript:;\" onClick='DeletePopUp(event," + full.Id + ")' class='btn btn-danger'>Delete</a>";
 
                     return result;
                 }
@@ -89,7 +88,61 @@ $(document).ready(function() {
 
     } );
 
-} );
+     function adjustSize() {
+        if ($(window).width() < 1000 || $(window).height() < 600) {
+            this.maximize();
+        }
+    }
 
+
+    Pelanggan.windowOptions = {
+        modal: true,
+        resizable: false,
+        pinned: true,
+        position: { top: 100 },
+        width: "500px",
+        maxHeight: $(window).height() * 9 / 10,
+        visible: false,
+        refresh: function () { this.center(); },
+        open: adjustSize,
+        animation: {
+            open: { effects: "slideIn:down fadeIn", duration: 350 },
+            close: { effects: "slideIn:up fadeIn", reverse: true, duration: 200 }
+        }, close: function () { $(this.element).empty() }
+    };
+
+    Pelanggan.CreatePopUp = function (e) {
+        e.preventDefault();
+
+        $(".k-window-title").html("Create Pelanggan");
+        $("#CreateWindow")
+            .data("kendoWindow")
+            .refresh({
+                url: "/Pelanggan/Create/"
+            })
+            .center()
+            .open();
+    };
+
+     Pelanggan.closeClick = function (e) {
+        e.preventDefault();
+        closing.closeWindow();
+    };
+
+    Pelanggan.closeWindow = function () {
+        $("#CreateWindow").data("kendoWindow").close();
+    };
+
+    return Pelanggan
+})(Pelanggan || {});
+
+
+document.addEventListener('DOMContentLoaded', function () {
+    $("#CreateWindow").kendoWindow(Pelanggan.windowOptions);
+    $("#DetailWindow").kendoWindow(Pelanggan.windowOptions);
+    $("#DeleteWindow").kendoWindow(Pelanggan.windowOptions);
+    $("#EditWindow").kendoWindow(Pelanggan.windowOptions);
+    $("#BtnCreate").click(Pelanggan.CreatePopUp);
+});
 </script>
 }
