--- a/LatihanSoal/Views/Shared/_Layout.cshtml
+++ b/LatihanSoal/Views/Shared/_Layout.cshtml
@@ -64,6 +64,8 @@
 
     <script src="~/lib/kendo/kendo.ui.core.min.js"></script>
     <script src="~/lib/kendo/kendo.culture.de-DE.js"></script>
+        <script src="~/js/custom.js" asp-append-version="true"></script>
+            <script src="~/js/app.js"></script>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
