--- a/LatihanSoal/Views/Pelanggan/Detail.cshtml
+++ b/LatihanSoal/Views/Pelanggan/Detail.cshtml
@@ -1,5 +1,56 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model LatihanSoal.Models.Pelanggan
+
+<div class="card">
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "FormPelanggan", name = "FormPelanggan", enctype = "multipart/form-data" }))
+{
+    @Html.HiddenFor(m => m.Id)
+    <div class="content">
+        <div class="form-group row">
+            <label class="col-form-label col-lg-4">Nama Pelanggan</label>
+            <div class="col-lg-8">
+                <label id="nama"></label>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-form-label col-lg-4">Alamat</label>
+            <div class="col-lg-8">
+                <label id="alamat"></label>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-form-label col-lg-4">Nomor Telepon</label>
+            <div class="col-lg-8">
+                <label id="noTelp"></label>
+            </div>
+        </div>
+        <div class="card-footer text-right">
+            <a href="#" class="btn btn-danger" id="BtnClose">Close</a>
+        </div>
+    </div>
 }
+</div>
+
+
+<script>
+    var Pelanggan = (function (Pelanggan) {
+
+        Pelanggan.closeWindow = function () {
+            $("#DetailWindow").data("kendoWindow").close();
+        };
+
+        return Pelanggan;
+    })(Pelanggan || {});
+
+    $(function () {
+        $.getJSON('https://localhost:7038/api/Pelanggan/'+@Model.Id, function(data) {
+            document.getElementById("nama").innerHTML = data.nama;
+            document.getElementById("alamat").innerHTML = data.alamat;
+            document.getElementById("noTelp").innerHTML = data.noTelp;
+        });
+
+        $(function () {
+            $("#BtnClose").click(Pelanggan.closeWindow);
+        });
+
+    });
+</script>
