--- a/LatihanSoal/Views/Product/Index.cshtml
+++ b/LatihanSoal/Views/Product/Index.cshtml
@@ -32,93 +32,6 @@
 
 @section Scripts
 {
-<script async='async' type='text/javascript'>
+<script src="~/js/Product.js"></script>
 
-             
-$(document).ready(function() {
-    var Product = (function (Product) {
- $('#myTable').DataTable( {
-        processing: true,
-        serverSide: false,
-        ajax:{
-            url:"https://localhost:7038/api/Product",
-            type:'GET',
-            dataSrc:""
-        }, 
-        columnDefs: [
-            {
-                "targets": [0],
-                "searchable": false,
-                "orderable": false
-            },
-            {
-                "targets": [1],
-                "visible": false,
-            }
-        ],
-        columns: [
-            { data: null },
-            { "data": "id" },
-            { "data": "nama" },
-            { "data": "harga" },
-            { "data": "deskripsi" },
-            {
-                "render": function (data, type, full, meta) {
-                    var result = "<a href=\"javascript:;\" onClick='DetailPopUp(event," + full.Id + ")' class='btn btn-secondary'>Detail</a>";
-                        result = result + " <a href=\"javascript:;\" onClick='EditPopUp(event," + full.Id + ")' class='btn btn-warning'>Edit</a>";
-                        result = result + " <a href=\"javascript:;\" onClick='DeletePopUp(event," + full.Id + ")' class='btn btn-danger'>Delete</a>";
-
-                    return result;
-                }
-            }
-        ],
-        rowCallback: function (row, data, index) {
-            var start = this.api().page.info().start;
-
-            $('td:eq(0)', row).html(start + index + 1);
-        }
-
-    } );
-
-    Product.windowOptions = {
-        modal: true,
-        resizable: false,
-        pinned: true,
-        position: { top: 100 },
-        width: "80%",
-        maxHeight: $(window).height() * 9 / 10,
-        visible: false,
-        refresh: function () { this.center(); },
-        open: adjustSize,
-        animation: {
-            open: { effects: "slideIn:down fadeIn", duration: 350 },
-            close: { effects: "slideIn:up fadeIn", reverse: true, duration: 200 }
-        }, close: function () { $(this.element).empty() }
-    };
-
-    Product.CreatePopUp = function (e) {
-        e.preventDefault();
-
-        $(".k-window-title").html("Create TLE");
-        $("#CreateEditWindow")
-            .data("kendoWindow")
-            .refresh({
-                url: "/TLE/Create/"
-            })
-            .center()
-            .open();
-    };
-
-    return Product
-})(Product || {});
-} );
-
-document.addEventListener('DOMContentLoaded', function () {
-    $("#CreateWindow").kendoWindow(Product.windowOptions);
-    $("#DetailWindow").kendoWindow(Product.windowOptions);
-    $("#DeleteWindow").kendoWindow(Product.windowOptions);
-    $("#EditWindow").kendoWindow(Product.windowOptions);
-    $("#BtnCreate").click(Product.CreatePopUp);
-});
-</script>
 }
