--- a/LatihanSoal/Views/Product/Delete.cshtml
+++ b/LatihanSoal/Views/Product/Delete.cshtml
@@ -1,5 +1,89 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model LatihanSoal.Models.Product
+
+<div class="card">
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "FormProduct", name = "FormProduct", enctype = "multipart/form-data" }))
+{
+    @Html.HiddenFor(m => m.Id)
+    @Html.AntiForgeryToken()
+    <div class="content">
+        <div class="form-group row">
+            <label class="col-form-label col-lg-4">Nama Product</label>
+            <div class="col-lg-8">
+                <label id="nama"></label>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-form-label col-lg-4">Harga</label>
+            <div class="col-lg-8">
+                <label id="Harga"></label>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-form-label col-lg-4">Deskripsi</label>
+            <div class="col-lg-8">
+                <label id="Deskripsi"></label>
+            </div>
+        </div>
+        <div class="card-footer text-right">
+            <button type="submit" class="btn btn-danger btn-labeled btn-labeled-right" id="BtnSubmit"><b><i class="icon-paperplane"></i></b>Delete</button>
+            <a href="#" class="btn btn-primary" id="BtnCancel">Cancel</a>
+        </div>
+    </div>
 }
+</div>
+
+
+<script>
+    var Product = (function (Product) {
+
+        Product.closeWindow = function () {
+            $("#DeleteWindow").data("kendoWindow").close();
+        };
+
+        Product.submit = function (e) {
+            e.preventDefault();
+            var url = "@Url.Action("Hapus")";
+            var formData = new FormData(this);
+         
+            $.ajax({
+                url: url,
+                enctype: 'multipart/form-data',
+                type: "POST",
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: function (result) {
+                    if (result.isSucceed) {
+                        $("#DeleteWindow").data("kendoWindow").close();
+                        swal("Success", result.message, {
+                            icon: "success"
+                        }).then(function() {
+                            window.location.reload();
+                        });
+                    }
+                    else {
+                        swal("Something Wrong", result.message, {
+                            icon: "error"
+                        });
+                    }
+                }
+            });
+
+        };
+
+        return Product;
+    })(Product || {});
+
+    $(function () {
+        $("#FormProduct").submit(Product.submit);
+        $("#BtnCancel").click(Product.closeWindow);
+
+        $.getJSON('https://localhost:7038/api/Product/'+@Model.Id, function(data) {
+            
+            document.getElementById("nama").innerHTML = data.nama;
+            document.getElementById("Harga").innerHTML = data.harga;
+            document.getElementById("Deskripsi").innerHTML = data.deskripsi;
+        });
+
+    });
+</script>
